# winiso

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
winiso/: __init__.py  __main__.py  api.py  bootusb.py  burn.py  catalog.py  cli.py  download.py  models.py  usb.py
winiso-rs/: Cargo.toml  README.md
winiso-rs/src/: error.rs  main.rs  models.rs
winiso-rs/src/burn/: mod.rs
winiso-rs/src/cli/: interactive.rs  mod.rs  progress.rs
winiso-rs/src/disk/: fat32.rs  mod.rs  partition.rs  raw_write.rs
winiso-rs/src/download/: mod.rs
winiso-rs/src/iso/: mod.rs
winiso-rs/src/microsoft/: api.rs  catalog.rs  mod.rs  models.rs
winiso-rs/src/usb/: linux.rs  macos.rs  mod.rs
winiso-rs/src/wim/: mod.rs
