[project]
name = "winiso"
version = "0.1.0"
description = "Cross-platform tool to download Windows ISOs from Microsoft"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
winiso = "winiso.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
